# tgminitest

./: .env.example  .env.production.example  .env.staging.example  API.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Makefile  PROJECT_STATE.md  QUICKSTART.md  QUICKSTART_NEXT_SESSION.md  README.md  RUNBOOK.md  architecture.md  decisions.md  docker-compose.prod.yml  docker-compose.yml  plan.md  todo.md
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial.py  002_add_payment_and_update_models.py  003_fix_payment_race_condition.py
backend/app/: config.py  main.py  monitoring.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: nft.py  quizzes.py  users.py
backend/app/bot/: main.py
backend/app/bot/handlers/: __init__.py  help_handler.py  nft.py  quiz.py  start.py
backend/app/bot/keyboards/: inline.py
backend/app/db/: __init__.py  database.py  seed.py
backend/app/models/: __init__.py  base.py  quiz.py  result.py  user.py
backend/app/schemas/: __init__.py  nft.py  quiz.py  user.py
backend/app/services/: __init__.py  payment_service.py  quiz_service.py  state_service.py  user_service.py
backend/app/services/ton/: __init__.py  metadata_service.py  nft_service.py  storage_service.py  wallet_service.py
backend/tests/: conftest.py
backend/tests/api/: test_nft_endpoints.py  test_quizzes.py
backend/tests/bot/: test_nft_handlers.py
backend/tests/models/: test_user_model.py
backend/tests/services/: test_metadata_service.py  test_nft_service.py  test_payment_service.py  test_quiz_service.py  test_storage_service.py  test_user_service.py  test_wallet_service.py
docs/: PHASE3_PLAN.md
